--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 **/.terraform/*
 
 # .tfstate files
-# *.tfstate
-# *.tfstate.*
+*.tfstate
+*.tfstate.*
 
 # Crash log files
 crash.log
@@ -38,3 +38,5 @@ override.tf.json
 terraform.rc
 
 # End of https://www.toptal.com/developers/gitignore/api/terraform
+terraform.tfstate
+terraform.tfstate.backup
