--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ terraform.rc
 # End of https://www.toptal.com/developers/gitignore/api/terraform
 terraform.tfstate
 terraform.tfstate.backup
+
+*.pem
+*.ppk
+*.pub
